--- a/previews/R&S.html
+++ b/previews/R&S.html
@@ -185,46 +185,51 @@
 		<div class="main-content" id="main-content">
 			<div class="grid-container">
 				<div class="container"><img alt="/sets\R&S-files\img\2_Matti, the Paladin.png" id="2_Matti, the Paladin" data-flag="@X" onclick="openSidebar('2_Matti, the Paladin',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\7_Twili, the Valedictorian.png" id="7_Twili, the Valedictorian" data-flag="@X" onclick="openSidebar('7_Twili, the Valedictorian',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\9_Merran, the Steeltooth.png" id="9_Merran, the Steeltooth" data-flag="@X" onclick="openSidebar('9_Merran, the Steeltooth',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\12_Ranalie, the Mythril.png" id="12_Ranalie, the Mythril" data-flag="@X" onclick="openSidebar('12_Ranalie, the Mythril',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\14_Avy, the Starry.png" id="14_Avy, the Starry" data-flag="@X" onclick="openSidebar('14_Avy, the Starry',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\8_Twili, the Valedictorian.png" id="8_Twili, the Valedictorian" data-flag="@X" onclick="openSidebar('8_Twili, the Valedictorian',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\11_Merran, the Steeltooth.png" id="11_Merran, the Steeltooth" data-flag="@X" onclick="openSidebar('11_Merran, the Steeltooth',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\16_Ranalie, the Mythril.png" id="16_Ranalie, the Mythril" data-flag="@X" onclick="openSidebar('16_Ranalie, the Mythril',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\18_Avy, the Starry.png" id="18_Avy, the Starry" data-flag="@X" onclick="openSidebar('18_Avy, the Starry',false)"></div>
 			<div class="container"><img alt="/sets\R&S-files\img\3_Nimi, the Archer.png" id="3_Nimi, the Archer" data-flag="@X" onclick="openSidebar('3_Nimi, the Archer',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\5_Saya, the Archon.png" id="5_Saya, the Archon" data-flag="@X" onclick="openSidebar('5_Saya, the Archon',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\8_Get In The Circle.png" id="8_Get In The Circle" data-flag="@X" onclick="openSidebar('8_Get In The Circle',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\11_Karsi, the Ruby.png" id="11_Karsi, the Ruby" data-flag="@X" onclick="openSidebar('11_Karsi, the Ruby',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\16_Blush, the Painter.png" id="16_Blush, the Painter" data-flag="@X" onclick="openSidebar('16_Blush, the Painter',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\4_Steel Yourself!.png" id="4_Steel Yourself!" data-flag="@X" onclick="openSidebar('4_Steel Yourself!',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\6_Stretch the Tether.png" id="6_Stretch the Tether" data-flag="@X" onclick="openSidebar('6_Stretch the Tether',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\10_Tassha, the Snowfur.png" id="10_Tassha, the Snowfur" data-flag="@X" onclick="openSidebar('10_Tassha, the Snowfur',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\13_They Were Roommates.png" id="13_They Were Roommates" data-flag="@X" onclick="openSidebar('13_They Were Roommates',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\15_Beast Mode.png" id="15_Beast Mode" data-flag="@X" onclick="openSidebar('15_Beast Mode',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\6_Saya, the Archon.png" id="6_Saya, the Archon" data-flag="@X" onclick="openSidebar('6_Saya, the Archon',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\12_Tassha, the Snowfur.png" id="12_Tassha, the Snowfur" data-flag="@X" onclick="openSidebar('12_Tassha, the Snowfur',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\15_Karsi, the Ruby.png" id="15_Karsi, the Ruby" data-flag="@X" onclick="openSidebar('15_Karsi, the Ruby',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\20_Blush, the Painter.png" id="20_Blush, the Painter" data-flag="@X" onclick="openSidebar('20_Blush, the Painter',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\4_Spread Out.png" id="4_Spread Out" data-flag="@X" onclick="openSidebar('4_Spread Out',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\9_Your Intellect Fails You.png" id="9_Your Intellect Fails You" data-flag="@X" onclick="openSidebar('9_Your Intellect Fails You',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\10_Get In The Circle.png" id="10_Get In The Circle" data-flag="@X" onclick="openSidebar('10_Get In The Circle',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\14_Dodge This.png" id="14_Dodge This" data-flag="@X" onclick="openSidebar('14_Dodge This',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\21_Just As Bright As You.png" id="21_Just As Bright As You" data-flag="@X" onclick="openSidebar('21_Just As Bright As You',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\5_Steel Yourself!.png" id="5_Steel Yourself!" data-flag="@X" onclick="openSidebar('5_Steel Yourself!',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\7_Stretch the Tether.png" id="7_Stretch the Tether" data-flag="@X" onclick="openSidebar('7_Stretch the Tether',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\13_Terribly Lonely.png" id="13_Terribly Lonely" data-flag="@X" onclick="openSidebar('13_Terribly Lonely',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\17_They Were Roommates.png" id="17_They Were Roommates" data-flag="@X" onclick="openSidebar('17_They Were Roommates',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\19_Beast Mode.png" id="19_Beast Mode" data-flag="@X" onclick="openSidebar('19_Beast Mode',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 <div id="gold" class="anchor"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\20_Dancer Rabbit.png" id="20_Dancer Rabbit" data-flag="@X" onclick="openSidebar('20_Dancer Rabbit',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\18_Assassin Rabbit.png" id="18_Assassin Rabbit" data-flag="@X" onclick="openSidebar('18_Assassin Rabbit',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\23_Heavyblade Rabbit.png" id="23_Heavyblade Rabbit" data-flag="@X" onclick="openSidebar('23_Heavyblade Rabbit',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\19_Bruiser Rabbit.png" id="19_Bruiser Rabbit" data-flag="@X" onclick="openSidebar('19_Bruiser Rabbit',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\25_Sniper Rabbit.png" id="25_Sniper Rabbit" data-flag="@X" onclick="openSidebar('25_Sniper Rabbit',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\25_Dancer Rabbit.png" id="25_Dancer Rabbit" data-flag="@X" onclick="openSidebar('25_Dancer Rabbit',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\23_Assassin Rabbit.png" id="23_Assassin Rabbit" data-flag="@X" onclick="openSidebar('23_Assassin Rabbit',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\28_Heavyblade Rabbit.png" id="28_Heavyblade Rabbit" data-flag="@X" onclick="openSidebar('28_Heavyblade Rabbit',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\24_Bruiser Rabbit.png" id="24_Bruiser Rabbit" data-flag="@X" onclick="openSidebar('24_Bruiser Rabbit',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\30_Sniper Rabbit.png" id="30_Sniper Rabbit" data-flag="@X" onclick="openSidebar('30_Sniper Rabbit',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\21_Defender Rabbit.png" id="21_Defender Rabbit" data-flag="@X" onclick="openSidebar('21_Defender Rabbit',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\27_Wizard Rabbit.png" id="27_Wizard Rabbit" data-flag="@X" onclick="openSidebar('27_Wizard Rabbit',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\17_Ancient Rabbit.png" id="17_Ancient Rabbit" data-flag="@X" onclick="openSidebar('17_Ancient Rabbit',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\26_Spellsword Rabbit.png" id="26_Spellsword Rabbit" data-flag="@X" onclick="openSidebar('26_Spellsword Rabbit',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\22_Druid Rabbit.png" id="22_Druid Rabbit" data-flag="@X" onclick="openSidebar('22_Druid Rabbit',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\26_Defender Rabbit.png" id="26_Defender Rabbit" data-flag="@X" onclick="openSidebar('26_Defender Rabbit',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\32_Wizard Rabbit.png" id="32_Wizard Rabbit" data-flag="@X" onclick="openSidebar('32_Wizard Rabbit',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\22_Ancient Rabbit.png" id="22_Ancient Rabbit" data-flag="@X" onclick="openSidebar('22_Ancient Rabbit',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\31_Spellsword Rabbit.png" id="31_Spellsword Rabbit" data-flag="@X" onclick="openSidebar('31_Spellsword Rabbit',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\27_Druid Rabbit.png" id="27_Druid Rabbit" data-flag="@X" onclick="openSidebar('27_Druid Rabbit',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\24_Shira, the Queen.png" id="24_Shira, the Queen" data-flag="@X" onclick="openSidebar('24_Shira, the Queen',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\29_Shira, the Queen.png" id="29_Shira, the Queen" data-flag="@X" onclick="openSidebar('29_Shira, the Queen',false)"></div>
 			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
@@ -235,8 +240,8 @@
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 <div id="colorless" class="anchor"></div>
 			<div class="container"><img alt="/sets\R&S-files\img\1_Asha, the Shopkeeper.png" id="1_Asha, the Shopkeeper" data-flag="@X" onclick="openSidebar('1_Asha, the Shopkeeper',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\29_Shira's Armory.png" id="29_Shiras Armory" data-flag="@X" onclick="openSidebar('29_Shiras Armory',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\28_Fullmoon Treasuresphere.png" id="28_Fullmoon Treasuresphere" data-flag="@X" onclick="openSidebar('28_Fullmoon Treasuresphere',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\34_Shira's Armory.png" id="34_Shiras Armory" data-flag="@X" onclick="openSidebar('34_Shiras Armory',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\33_Fullmoon Treasuresphere.png" id="33_Fullmoon Treasuresphere" data-flag="@X" onclick="openSidebar('33_Fullmoon Treasuresphere',false)"></div>
 			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
@@ -244,18 +249,18 @@
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 <div id="land" class="anchor"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\30_Churchmouse Streets.png" id="30_Churchmouse Streets" data-flag="@X" onclick="openSidebar('30_Churchmouse Streets',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\36_The Scholar's Nest.png" id="36_The Scholars Nest" data-flag="@X" onclick="openSidebar('36_The Scholars Nest',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\33_The King's Arsenal.png" id="33_The Kings Arsenal" data-flag="@X" onclick="openSidebar('33_The Kings Arsenal',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\35_The Red Darkhouse.png" id="35_The Red Darkhouse" data-flag="@X" onclick="openSidebar('35_The Red Darkhouse',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\31_The Emerald Lakeside.png" id="31_The Emerald Lakeside" data-flag="@X" onclick="openSidebar('31_The Emerald Lakeside',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\35_Churchmouse Streets.png" id="35_Churchmouse Streets" data-flag="@X" onclick="openSidebar('35_Churchmouse Streets',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\41_The Scholar's Nest.png" id="41_The Scholars Nest" data-flag="@X" onclick="openSidebar('41_The Scholars Nest',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\38_The King's Arsenal.png" id="38_The Kings Arsenal" data-flag="@X" onclick="openSidebar('38_The Kings Arsenal',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\40_The Red Darkhouse.png" id="40_The Red Darkhouse" data-flag="@X" onclick="openSidebar('40_The Red Darkhouse',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\36_The Emerald Lakeside.png" id="36_The Emerald Lakeside" data-flag="@X" onclick="openSidebar('36_The Emerald Lakeside',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\34_The Moonlit Pinnacle.png" id="34_The Moonlit Pinnacle" data-flag="@X" onclick="openSidebar('34_The Moonlit Pinnacle',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\32_Kingdom Outskirts.png" id="32_Kingdom Outskirts" data-flag="@X" onclick="openSidebar('32_Kingdom Outskirts',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\39_The Moonlit Pinnacle.png" id="39_The Moonlit Pinnacle" data-flag="@X" onclick="openSidebar('39_The Moonlit Pinnacle',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\37_Kingdom Outskirts.png" id="37_Kingdom Outskirts" data-flag="@X" onclick="openSidebar('37_Kingdom Outskirts',false)"></div>
 			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
@@ -265,10 +270,15 @@
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 <div id="token" class="anchor"></div>
 			<div class="container"><img alt="/sets\R&S-files\img\1t_The Monarch.png" id="1t_The Monarch" data-flag="@X" onclick="openSidebar('1t_The Monarch',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\4t_A Nice Hat.png" id="4t_A Nice Hat" data-flag="@X" onclick="openSidebar('4t_A Nice Hat',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\5t_Treasure.png" id="5t_Treasure" data-flag="@X" onclick="openSidebar('5t_Treasure',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\2t_Mouse Knight.png" id="2t_Mouse Knight" data-flag="@X" onclick="openSidebar('2t_Mouse Knight',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\3t_Varmint.png" id="3t_Varmint" data-flag="@X" onclick="openSidebar('3t_Varmint',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\3t_A Nice Hat.png" id="3t_A Nice Hat" data-flag="@X" onclick="openSidebar('3t_A Nice Hat',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\4t_Spirit.png" id="4t_Spirit" data-flag="@X" onclick="openSidebar('4t_Spirit',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\5t_Spirit.png" id="5t_Spirit" data-flag="@X" onclick="openSidebar('5t_Spirit',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\6t_Spirit.png" id="6t_Spirit" data-flag="@X" onclick="openSidebar('6t_Spirit',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\7t_Spirit.png" id="7t_Spirit" data-flag="@X" onclick="openSidebar('7t_Spirit',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\8t_Treasure.png" id="8t_Treasure" data-flag="@X" onclick="openSidebar('8t_Treasure',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\1t_Mouse Knight.png" id="1t_Mouse Knight" data-flag="@X" onclick="openSidebar('1t_Mouse Knight',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\2t_Varmint.png" id="2t_Varmint" data-flag="@X" onclick="openSidebar('2t_Varmint',false)"></div>
+			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
